--- a/style.css
+++ b/style.css
@@ -230,6 +230,10 @@ h1, h2 {
     gap: 50px;
 }
 
+#start.container p {
+    text-align: center;
+}
+
 #copyright.container {
     background-color:rgb(15, 49, 65);
     width: 100vw;
